Re-added fields to profile JSON. Added template route
